Analisis sintactico ascendente/Punto 4/expr.output
State 10 conflicts: 2 shift/reduce


Grammar

    0 $accept: start $end

    1 start: L

    2 L: %empty
    3  | L L_

    4 L_: E L

    5 E: A L B
    6  | ident

    7 A: '<' ident '>'

    8 B: '<' '/' ident '>'


Terminals, with rules where they appear

    $end (0) 0
    '/' (47) 8
    '<' (60) 7 8
    '>' (62) 7 8
    error (256)
    ident (258) 6 7 8


Nonterminals, with rules where they appear

    $accept (7)
        on left: 0
    start (8)
        on left: 1
        on right: 0
    L (9)
        on left: 2 3
        on right: 1 3 4 5
    L_ (10)
        on left: 4
        on right: 3
    E (11)
        on left: 5 6
        on right: 4
    A (12)
        on left: 7
        on right: 5
    B (13)
        on left: 8
        on right: 5


State 0

    0 $accept: . start $end

    $default  reduce using rule 2 (L)

    start  go to state 1
    L      go to state 2


State 1

    0 $accept: start . $end

    $end  shift, and go to state 3


State 2

    1 start: L .
    3 L: L . L_

    ident  shift, and go to state 4
    '<'    shift, and go to state 5

    $default  reduce using rule 1 (start)

    L_  go to state 6
    E   go to state 7
    A   go to state 8


State 3

    0 $accept: start $end .

    $default  accept


State 4

    6 E: ident .

    $default  reduce using rule 6 (E)


State 5

    7 A: '<' . ident '>'

    ident  shift, and go to state 9


State 6

    3 L: L L_ .

    $default  reduce using rule 3 (L)


State 7

    4 L_: E . L

    $default  reduce using rule 2 (L)

    L  go to state 10


State 8

    5 E: A . L B

    $default  reduce using rule 2 (L)

    L  go to state 11


State 9

    7 A: '<' ident . '>'

    '>'  shift, and go to state 12


State 10

    3 L: L . L_
    4 L_: E L .

    ident  shift, and go to state 4
    '<'    shift, and go to state 5

    ident     [reduce using rule 4 (L_)]
    '<'       [reduce using rule 4 (L_)]
    $default  reduce using rule 4 (L_)

    L_  go to state 6
    E   go to state 7
    A   go to state 8


State 11

    3 L: L . L_
    5 E: A L . B

    ident  shift, and go to state 4
    '<'    shift, and go to state 13

    L_  go to state 6
    E   go to state 7
    A   go to state 8
    B   go to state 14


State 12

    7 A: '<' ident '>' .

    $default  reduce using rule 7 (A)


State 13

    7 A: '<' . ident '>'
    8 B: '<' . '/' ident '>'

    ident  shift, and go to state 9
    '/'    shift, and go to state 15


State 14

    5 E: A L B .

    $default  reduce using rule 5 (E)


State 15

    8 B: '<' '/' . ident '>'

    ident  shift, and go to state 16


State 16

    8 B: '<' '/' ident . '>'

    '>'  shift, and go to state 17


State 17

    8 B: '<' '/' ident '>' .

    $default  reduce using rule 8 (B)
